syntax = "proto3";

package account.v1;
option go_package="account/v1;accountv1";

service AccountService {
  // 入账
  rpc Credit(CreditRequest) returns(CreditResponse);
}

message CreditRequest {
  // 具体入账的各种信息
  // 有一些设计师不用这个业务方的凭证，而是用支付的凭证
  string biz = 1;
  int64 biz_id = 2;
  // 这里你可以有更多的字段，也就是之前我说的，订单的详情，支付的详情，你都可以在这里加
  repeated CreditItem items = 3;
}

message CreditResponse {
}

message CreditItem {
  // 记录哪一方收到了多少钱
  // 怎么用字段表示每一方
  // 平台账号你怎么表达？
  int64 account = 1;
  // 不同账号用在不同的场景里面，用一个 type 来表示会更好
  AccountType account_type = 2;

  int64 amt = 3;
  string currency = 4;

  int64 uid = 5;

}

enum AccountType {
    AccountTypeUnknown = 0;
    // 个人赞赏账号
    AccountTypeReward = 1;
    // 平台分成账号
    AccountTypeSystem = 2;
}